--- a/wagon/training-at-scale/01.md
+++ b/wagon/training-at-scale/01.md
@@ -1,15 +1,16 @@
-# Objective
+## 01 - GCP Setup
+
+### Objective
 
 In this series of exercises, you will learn how to deploy your code to [Google Cloud Platform](https://cloud.google.com/) aka **GCP** and in particular how to use **[AI Platform](https://cloud.google.com/ai-platform/)** in order to leverage the power of distributed computing and speedup your ML experimentation.
 
 Beyond training models, you will see how you can make your models available to the world, manage different versions and serve predictions at scale.
 
 
-# GCP Setup
 
-## Setup Project
+#### Setup Project
 - Go to [Google Cloud](https://console.cloud.google.com/) and create an account if you do not already have one.
-- In the Cloud Console, on the project selector page, select or create a Cloud project. You can name it `YNOV AICloud` for example
+- In the Cloud Console, on the project selector page, select or create a Cloud project. You can name it `ynov-aicloud` for example
 - Notice the `ID` automatically created for the project. If you used the suggestion for the project name, it should look like `ynov-aicloud-123456`. This `PROJECT_ID` will be refered to later and used all over the code in order to identify the GCP project your code will be interacting with. You will be able to access it anytime in the project list (click to zoom):
 
 <img src="gcp-show-project-id.png" width="150" alt="finding your PROJECT_ID in GCP">
@@ -17,7 +18,7 @@ Beyond training models, you will see how you can make your models available to t
 - Make sure that billing is enabled for your Google Cloud project. Don't worry, as a first time user, you have a **$300 credit** to use for Google Cloud resources, which will be more than enough for this project.
 - [Enable the AI Platform Training & Prediction and Compute Engine APIs.](https://console.cloud.google.com/flows/enableapi?apiid=ml.googleapis.com,compute_component&_ga=2.269215094.662509797.1580849510-2071889129.1567861089&_gac=1.154971594.1580849512.CjwKCAiAyeTxBRBvEiwAuM8dnbZ6uMwizbZW44J2mBCX6ncEjwjwpgF8S8QsvhYAXLkJ8awDnIRTNRoCJ_0QAvD_BwE) This step may take a few minutes.
 
-## Install Cloud sdk
+#### Install Cloud sdk
 
 We need to install a new cli called gcloud. Once you are authenticated, this tool will allow you to perform any operation on the GCP platform from the command line.
 
@@ -48,7 +49,7 @@ gcloud config list
 gcloud init
 ```
 
-## Create a service account key 🔑
+#### Create a service account key 🔑
 Now that you have created a `GCP account` and a `project` (identified by its `PROJECT_ID`), we are going to configure the actions (API calls) that you want to allow your code to perform.
 
 Since API calls are not free, it may be important to define these with caution, but for the purpose of the bootcamp this will not be an issue and we are going to allow our code to use all API without any restrictions (see the project owner part later).
@@ -109,14 +110,14 @@ gcloud projects get-iam-policy PROJECT_ID \
 
 Now your setup is complete : you used a `google account` to access the GCP platform, created a `project`, and a service account json key file which allows your code to use GCP APIs and is safely stored on your machine.
 
-### Troubleshooting
+##### Troubleshooting
 
 `AccessDeniedException: 403 The project to be billed is associated with an absent billing account.`
 
 - Make sure that billing is enabled for your Google Cloud Platform project.
 https://cloud.google.com/billing/docs/how-to/modify-project
 
-# Upload file to Google Cloud Storage
+### Upload file to Google Cloud Storage
 
 Now that you have a working setup, we are going to start using the products provided by the GCP platform. GCP provides tens of products, but we will be interested mainly by 2 products : `Storage`, and `AI Platform`.
 
@@ -163,3 +164,4 @@ make upload_data
 ```
 
 👉 Check on [Storage](https://console.cloud.google.com/storage) that your file was correctly uploaded. You should see a `train_1k.csv` file in the `data` folder of your bucket. Look at the content of the `Makefile`. Can you see how the command used in order to upload the file is built ?
+
