--- a/wagon/training-at-scale/03.md
+++ b/wagon/training-at-scale/03.md
@@ -1,11 +1,13 @@
-# Objective
+## 03 - Train Taxi Fare
+
+### Objective
 
 In the previous exercice, we trained a basic model on GCP. We will now integrate a complete pipeline and use the trained model to make a prediction.
 
 Deploy, train and use your pipeline model with GCP.
 You've trained and evaluated your first Pipeline on your laptop, now you'll do everything on GCP.
 
-## Complete TaxiFareModel/trainer.py to be trainable and deployable to GCP
+### Complete TaxiFareModel/trainer.py to be trainable and deployable to GCP
 
 Here we go back with the pipeline from day3 including:
 - Custom encoders
@@ -24,7 +26,7 @@ Take a step back and ask yourself what information is now stored inside of our `
 
 💡 Now we have the `preprocessing` and `model` information stored in our model.joblib object.
 
-## Test your workflow locally first
+### Test your workflow locally first
 
 Here you will run `make run_locally` on your local machine:
 - Train on a few samples first to check that everything runs without error
@@ -34,7 +36,7 @@ Once everything is working ok, please make sure that:
 - the requirements in `setup.py` match your requirements on your virtual environement
 💡 **This step is very important, most of your errors in the next section will be linked to mismatch between requirements on your machine and requirements you specified in setup.py**
 
-## Train your model on GCP
+### Train your model on GCP
 
 Edit the `Makefile` and run `make gcp_submit_training` to train your model on GCP
 
@@ -44,7 +46,7 @@ Same as before here:
 
 💡**NB: Check that all the dependencies are inside the setup.py file**
 
-## Use your model for predictions
+### Use your model for predictions
 
 Now, have a look at `predict.py` and specifically check how we:
 👉 load pipeline model from storage
@@ -58,3 +60,4 @@ python predict.py
 ```
 
 You just made your first prediction using a GCP model ! 🚀
+
